[package]
name = "prisma-capi"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.149"
prisma_dmmf = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0", package = "dmmf" }

