[package]
name = "prisma-capi"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.149"
request-handlers = { git = "https://github.com/prisma/prisma-engines" }
psl = { git = "https://github.com/prisma/prisma-engines" }
thiserror = "1.0.50"
query-core = { git = "https://github.com/prisma/prisma-engines" }
query-connector = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }
user-facing-errors = { git = "https://github.com/prisma/prisma-engines", version = "0.1.0" }

