[package]
name = "prisma-query-engine-c-api"
authors = ["Seven Du <whine.whitish.0u@icloud.com>"]
repository = "https://github.com/odroe/prisma"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name= "query_engine"

[dependencies]
libc = "0.2.127"
sql-connector = { git = "https://github.com/prisma/prisma-engines", package = "sql-query-connector" }
