[package]
name = "prisma-query-engine-c-api"
authors = ["Seven Du <whine.whitish.0u@icloud.com>"]
repository = "https://github.com/odroe/prisma"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name= "query_engine"

[features]
vendored-openssl = ["sql-connector/vendored-openssl"]

[dependencies]
libc = "0.2.127"
serde = "1.0.142"
serde_json = "1.0.83"

sql-connector = { git = "https://github.com/prisma/prisma-engines", package = "sql-query-connector" }
datamodel = { git = "https://github.com/prisma/prisma-engines" }
prisma-models = { git = "https://github.com/prisma/prisma-engines" }
query-core = { git = "https://github.com/prisma/prisma-engines" }
request-handlers = { git = "https://github.com/prisma/prisma-engines" }
