[package]
name = "dynamic_library"
version = "0.1.0"
edition = "2021"
authors = ["Seven Du <whine.whitish.0u@icloud.com>"]
repository = "https://github.com/odroe/prisma"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name= "query_engine_dylib"

[features]
# vendored-openssl = ["sql-connector/vendored-openssl"]

[dependencies]
datamodel = { git = "https://github.com/prisma/prisma-engines" }

libc = "0.2.127"
thiserror = "1.0.32"

[dev-dependencies]

[build-dependencies]
cbindgen = "0.24.3"
