[package]
name = "dynamic_library"
version = "0.1.0"
edition = "2021"
authors = ["Seven Du <whine.whitish.0u@icloud.com>"]
repository = "https://github.com/odroe/prisma"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name= "query_engine_dylib"

[features]
# vendored-openssl = ["sql-connector/vendored-openssl"]

[dependencies]
datamodel = { git = "https://github.com/prisma/prisma-engines" }
datamodel-connector = { git = "https://github.com/prisma/prisma-engines" }
query-core = { git = "https://github.com/prisma/prisma-engines" }
query-connector = { git = "https://github.com/prisma/prisma-engines" }
prisma-models = { git = "https://github.com/prisma/prisma-engines" }
request-handlers = { git = "https://github.com/prisma/prisma-engines" }

libc = "0.2.127"
thiserror = "1.0.32"
serde = "1.0.142"
serde_json = "1.0.83"
url = "2.2.2"
connection-string = "0.1.14"

[dev-dependencies]

[build-dependencies]
cbindgen = "0.24.3"
